--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -46,7 +46,9 @@ services:
       context: ./web/client/
       dockerfile: Dockerfile
       target: build
-    command: /bin/bash -c "echo 'built with qx' && cat build-output/version.txt"
+    # when running in devel mode the command from docker-compose.yml and docker-compose.devel.yml
+    # get appended (I guess docker compose sees command as an array to be appended)
+    # command: /bin/bash -c "echo 'built with qx' && cat build-output/version.txt"
   webserver:
     build:
       context: ../
