compose for production element

--- a/services/docker-compose.build-client.yml
+++ b/services/docker-compose.build-client.yml
@@ -2,4 +2,4 @@
 version: '3.4'
 services:
   webclient:
-    command: compile
+    command: /bin/bash -c "echo 'built with qx' && cat build-output/version.txt"
