Revert "Merge branch 'osx-swarm-support' of git://github.com/oetiker/osparc-simcore into feature/materialDBOuputsList"
This reverts commit b861135ecf78bbf20fa06915579f9ab07992c011, reversing
changes made to e460e752635863015227d86f774c6a47eb40cd50.

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -46,9 +46,7 @@ services:
       context: ./web/client/
       dockerfile: Dockerfile
       target: build
-    # when running in devel mode the command from docker-compose.yml and docker-compose.devel.yml
-    # get appended (I guess docker compose sees command as an array to be appended)
-    # command: /bin/bash -c "echo 'built with qx' && cat build-output/version.txt"
+    command: /bin/bash -c "echo 'built with qx' && cat build-output/version.txt"
   webserver:
     build:
       context: ../
