return value of location id is an integer not a number

--- a/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/location.yml
+++ b/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/location.yml
@@ -19,7 +19,7 @@ FileLocation:
     name:
       type: string
     id:
-      type: number
+      type: integer
   example:
     filename: 'simcore.s3'
     id: 0
