--- a/packages/simcore-sdk/tests/nodeports/docker-compose.yml
+++ b/packages/simcore-sdk/tests/nodeports/docker-compose.yml
@@ -1,5 +1,28 @@
 version: '3'
 services:
+  storage:
+    # image: masu.speag.com/simcore/workbench/storage
+    restart: always
+    image: services_storage:latest
+    ports:
+      - 11111:8080
+    environment:
+      - POSTGRES_ENDPOINT=postgres:5432
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=pwd
+      - POSTGRES_DB=test
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=testbucket
+      - RUN_DOCKER_ENGINE_ROOT=0
+      - BF_API_SECRET="none"
+      - BF_API_KEY="none"
+    depends_on: 
+      - postgres
+      # - minio
   postgres:
     restart: always
     image: postgres:10
@@ -9,15 +32,15 @@ services:
       - POSTGRES_DB=test
     ports:
       - "5432:5432"
-  minio:
-    restart: always
-    image: minio/minio
-    environment:
-      - MINIO_ACCESS_KEY=s3access
-      - MINIO_SECRET_KEY=s3secret
-    ports:
-      - "9000:9000"
-    command: server /data
+  # minio:
+  #   restart: always
+  #   image: minio/minio
+  #   environment:
+  #     - MINIO_ACCESS_KEY=s3access
+  #     - MINIO_SECRET_KEY=s3secret
+  #   ports:
+  #     - "9000:9000"
+  #   command: server /data
   # monitors databases
   adminer:
     image: adminer
