--- a/packages/simcore-sdk/tests/nodeports/docker-compose.yml
+++ b/packages/simcore-sdk/tests/nodeports/docker-compose.yml
@@ -1,10 +1,12 @@
-version: '3'
+version: '3.6'
 services:
   storage:
-    #FIXME: this is a annoying dependency. mocking it would be helpful and ease testing...
-    image: masu.speag.com/simcore/workbench/storage:3.19
-    restart: always
-    # image: services_storage:latest
+    build:
+      context: ../../../../
+      dockerfile: services/storage/Dockerfile
+      args:
+        - DOCKER_GID_ARG=1500
+      target: production        
     ports:
       - 11111:8080
     environment:
@@ -17,10 +19,11 @@ services:
       - S3_ENDPOINT=${S3_ENDPOINT}
       - S3_ACCESS_KEY=${S3_ACCESS_KEY}
       - S3_SECRET_KEY=${S3_SECRET_KEY}
-      - S3_BUCKET_NAME=testbucket
-      - RUN_DOCKER_ENGINE_ROOT=0
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - RUN_DOCKER_ENGINE_ROOT=1
       - BF_API_SECRET="none"
       - BF_API_KEY="none"
+    restart: always
     depends_on: 
       - postgres
       # - minio
@@ -33,15 +36,6 @@ services:
       - POSTGRES_DB=test
     ports:
       - "5432:5432"
-  # minio:
-  #   restart: always
-  #   image: minio/minio
-  #   environment:
-  #     - MINIO_ACCESS_KEY=s3access
-  #     - MINIO_SECRET_KEY=s3secret
-  #   ports:
-  #     - "9000:9000"
-  #   command: server /data
   # monitors databases
   adminer:
     image: adminer
