fixed dependencies of sidecar

--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -42,7 +42,8 @@ services:
         - HOST_GID_ARG=${HOST_GID:?Undefined host gid}
       target: development
     volumes:
-      - ./sidecar:/home/scu/services/sidecar
+      - ./sidecar:/home/scu/services/sidecar      
+      - ./storage/client-sdk:/home/scu/services/storage/client-sdk
       - ../packages:/home/scu/packages
   #--------------------------------------------------------------------
   storage:
