--- a/.env-devel
+++ b/.env-devel
@@ -16,6 +16,7 @@ RABBITMQ_USER=simcore
 RABBITMQ_PASSWORD=simcore
 RABBITMQ_PROGRESS_CHANNEL=comp.backend.channels.progress
 RABBITMQ_LOG_CHANNEL=comp.backend.channels.log
+STORAGE_ENDPOINT=storage:11111/v0
 S3_ENDPOINT=minio:9000
 S3_ACCESS_KEY=12345678
 S3_SECRET_KEY=12345678
