--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ matrix:
         - pip3 list
 
       script:
-        - export HOST_GID=1000
+        - export DOCKER_GID=1042
         - docker-compose -f services/docker-compose.yml build storage
         - make pylint
         - make test
