Adapted configurations to latest schema. Added environs to docker-compose and removed from .env-devel hosts and ports (should be hard-coded in docker-compose)

--- a/services/web/server/tests/unit/mock/configs/light-test.yaml
+++ b/services/web/server/tests/unit/mock/configs/light-test.yaml
@@ -13,14 +13,15 @@ main:
 director:
   host: localhost
   port: 8001
-postgres:
-  database: test_db
-  user: test_user
-  password: test_pass
-  host: localhost
-  port: 0000
-  # DEPRECATE OR add postgresql+psycopg2:// otherwise will fail sqlalchemy.exc.ArgumentError: Could not parse rfc1738 URL from string 'localhost:5432'
-  endpoint: localhost:5432
+db:
+  postgres:
+    database: test_db
+    user: test_user
+    password: test_pass
+    host: localhost
+    port: 0000
+    # DEPRECATE OR add postgresql+psycopg2:// otherwise will fail sqlalchemy.exc.ArgumentError: Could not parse rfc1738 URL from string 'localhost:5432'
+    endpoint: localhost:5432
 rabbit:
   host: ${RABBIT_HOST}
   password: simcore
@@ -28,11 +29,11 @@ rabbit:
   channels:
     log: comp.backend.channels.log
     progress: comp.backend.channels.progress
-s3:
-  access_key: '12345678'
-  bucket_name: simcore
-  endpoint: localhost:9000
-  secret_key: '12345678'
+# s3:
+#   access_key: '12345678'
+#   bucket_name: simcore
+#   endpoint: localhost:9000
+#   secret_key: '12345678'
 smtp:
   sender: 'OSPARC support <support@osparc.io>'
   host: mail.foo.com
