--- a/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
@@ -7,20 +7,20 @@ main:
   public_url: http://localhost:8080
   testing: true
   disable_services: []
-  db:
-    init_tables: True
+db:
+  init_tables: True
+  postgres:
+    database: simcoredb
+    endpoint: postgres:5432
+    host: localhost
+    maxsize: 5
+    minsize: 1
+    password: simcore
+    port: 5432
+    user: simcore
 director:
   host: director
   port: 8001
-postgres:
-  database: simcoredb
-  endpoint: postgres:5432
-  host: localhost
-  maxsize: 5
-  minsize: 1
-  password: simcore
-  port: 5432
-  user: simcore
 rabbit:
   channels:
     log: comp.backend.channels.log
@@ -34,8 +34,13 @@ smtp:
   tls: False
   username: Null
   password: Null
-s3:
-  access_key: 'Q3AM3UQ867SPQQA43P2F'
-  bucket_name: simcore
-  endpoint: play.minio.io:9000
-  secret_key: 'zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG'
+# s3:
+#   access_key: 'Q3AM3UQ867SPQQA43P2F'
+#   bucket_name: simcore
+#   endpoint: play.minio.io:9000
+#   secret_key: 'zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG'
+rest:
+  oas:
+    version: v0
+    location: ../../../../../../api/specs/webserver/v0
+    #location: http://localhost:8043/api/specs/webserver/v0
