--- a/services/web/server/src/simcore_service_webserver/config/server-docker-prod.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-docker-prod.yaml
@@ -8,29 +8,29 @@ main:
   client_outdir: ${SIMCORE_WEB_OUTDIR}
   log_level: INFO
   testing: False
-  db:
-    init_tables: True
 director:
   host: ${DIRECTOR_HOST}
   port: ${DIRECTOR_PORT}
-postgres:
-  database: ${POSTGRES_DB}
-  endpoint: ${POSTGRES_ENDPOINT}
-  user: ${POSTGRES_USER}
-  password: ${POSTGRES_PASSWORD}
-  host: ${POSTGRES_HOST}
-  port: ${POSTGRES_PORT}
+db:
+  init_tables: True
+  postgres:
+    database: ${POSTGRES_DB}
+    endpoint: ${POSTGRES_ENDPOINT}
+    user: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+    host: ${POSTGRES_HOST}
+    port: ${POSTGRES_PORT}
 rabbit:
   user: ${RABBITMQ_USER}
   password: ${RABBITMQ_PASSWORD}
   channels:
     progress: ${RABBITMQ_PROGRESS_CHANNEL}
     log: ${RABBITMQ_LOG_CHANNEL}
-s3:
-  endpoint: ${S3_ENDPOINT}
-  access_key: ${S3_ACCESS_KEY}
-  secret_key: ${S3_SECRET_KEY}
-  bucket_name: ${S3_BUCKET_NAME}
+# s3:
+#   endpoint: ${S3_ENDPOINT}
+#   access_key: ${S3_ACCESS_KEY}
+#   secret_key: ${S3_SECRET_KEY}
+#   bucket_name: ${S3_BUCKET_NAME}
 smtp:
   sender: 'OSPARC support <support@osparc.io>'
   host: ${SMTP_HOST}
@@ -38,4 +38,8 @@ smtp:
   tls: False
   username: Null
   password: Null
+rest:
+  oas:
+    version: v0
+    location: http://${APIHUB_HOST}:${APIHUB_PORT}/api/specs/webserver/v0
 ...
