--- a/services/web/server/src/simcore_service_webserver/config/server-defaults.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-defaults.yaml
@@ -4,7 +4,6 @@ main:
   host: 127.0.0.1
   log_level: DEBUG
   port: 8080
-  public_url: http://localhost:9081
   testing: true
   disable_services: []
 director:
@@ -40,6 +39,7 @@ smtp:
   username: Null
   password: Null
 rest:
-  oas:
-    version: v0
-    location: http://localhost:8043/api/specs/webserver/v0
+  version: v0
+  location: http://localhost:8043/api/specs/webserver/v0/openapi.yaml
+  extra_urls:
+    - http://localhost:9081
