--- a/services/web/server/src/simcore_service_webserver/config/server-docker-dev.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-docker-dev.yaml
@@ -4,11 +4,9 @@ version: "1.0"
 main:
   host: 0.0.0.0
   port: 8080
-  public_url: ${OSPARC_PUBLIC_URL}
   client_outdir: ${SIMCORE_WEB_OUTDIR}
   log_level: DEBUG
   testing: True
-  # disable_services: [director, postgres, rabbit, s3]
 director:
   host: ${DIRECTOR_HOST}
   port: ${DIRECTOR_PORT}
@@ -40,7 +38,8 @@ smtp:
   username: Null
   password: Null
 rest:
-  oas:
-    version: v0
-    location: http://${APIHUB_HOST}:${APIHUB_PORT}/api/specs/webserver/v0
+  version: v0
+  location: http://${APIHUB_HOST}:${APIHUB_PORT}/api/specs/webserver/v0/openapi.yaml
+  extra_urls:
+    - ${OSPARC_PUBLIC_URL}
 ...
