--- a/services/web/server/src/simcore_service_webserver/config/server-template.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-template.yaml
@@ -38,7 +38,8 @@ smtp:
   username: Null
   password: Null
 rest:
-  oas:
-    version: v0
-    location: http://${APIHUB_HOST}:${APIHUB_PORT}/api/specs/webserver/v0
+  version: v0
+  location: http://${APIHUB_HOST}:${APIHUB_PORT}/api/specs/webserver/v0/openapi.yaml
+  extra_urls:
+    - ${OSPARC_PUBLIC_URL}
 ...
