--- a/services/web/server/tests/unit/mock/configs/light-test.yaml
+++ b/services/web/server/tests/unit/mock/configs/light-test.yaml
@@ -41,4 +41,7 @@ smtp:
   tls: False
   username: None
   password: None
+rest:
+  version: v0
+  location: api/specs/webserver/v0/openapi.yaml
 ...
