--- a/services/web/server/tests/login/config.yaml
+++ b/services/web/server/tests/login/config.yaml
@@ -40,4 +40,4 @@ smtp:
   password: None
 rest:
   version: v0
-  location: api/specs/webserver/v0/openapi.yaml
+  location: ../../../../api/specs/webserver/v0/openapi.yaml
