fixes on schema my.yaml test failures

--- a/api/specs/webserver/v0/components/schemas/my.yaml
+++ b/api/specs/webserver/v0/components/schemas/my.yaml
@@ -44,7 +44,7 @@ ErrorEnvelopeModel:
   type: object
   properties:
     error:
-      $ref: "./error.yml#/ErrorType"
+      $ref: "./error.yaml#/ErrorType"
       nullable: true
 
 
