--- a/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/locations.yaml
+++ b/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/locations.yaml
@@ -9,7 +9,7 @@ FileLocationEnveloped:
       nullable: true
       default: null
     error:
-      $ref: "./error.yml#/ErrorType"
+      $ref: "./error.yaml#/ErrorType"
       nullable: true
       default: null
 
