--- a/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
@@ -1,6 +1,6 @@
 version: '1.0'
 main:
-  client_outdir: ~/devp/osparc-simcore/services/web/client/source-output
+  client_outdir: ${OSPARC_SIMCORE_REPO_ROOTDIR}/services/web/client/source-output
   host: 127.0.0.1
   log_level: INFO
   port: 8080
@@ -40,7 +40,7 @@ smtp:
 #   secret_key: 'zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG'
 rest:
   version: v0
-  location: ~/devp/osparc-simcore/api/specs/webserver/v0/openapi.yaml
+  location: ${OSPARC_SIMCORE_REPO_ROOTDIR}/api/specs/webserver/v0/openapi.yaml
   #location: http://localhost:8043/api/specs/webserver/v0/openapi.yaml
   extra_urls:
     - http://localhost:8080
