added custom.js to notebook to prevent opening in a new tab

--- a/services/dy-jupyter/Dockerfile
+++ b/services/dy-jupyter/Dockerfile
@@ -40,6 +40,7 @@ RUN pip install --upgrade pip && \
 # ----------------------------------------------------------------
 # prepare for booting
 COPY --chown=jovyan:users services/dy-jupyter/docker /docker
+COPY --chown=jovyan:users services/dy-jupyter/notebook-customisation/custom.js /home/jovyan/.jupyter/custom
 
 ENV NOTEBOOK_URL="notebooks/notebook.ipynb"
 # ----------------------------------------------------------------
