--- a/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/file_meta_data_array.yaml
+++ b/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/file_meta_data_array.yaml
@@ -1,18 +1,18 @@
 components:
   schemas:
-    FileLocationArrayEnveloped:
+    FileMetaDataArrayEnveloped:
       type: object
       required:
         - data
         - error
       properties:
         data:
-          $ref: '#/components/schemas/FileLocationArray'
+          $ref: '#/components/schemas/FileMetaDataArrayType'
         error:
           nullable: true
           default: null
 
-    FileLocationArray:
+    FileMetaDataArrayType:
       type: array
       items:
-        $ref: './location.yml#/components/schemas/FileLocation'
+        $ref: './file_meta_data.yaml#/components/schemas/FileMetaDataType'
