--- a/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/location_array.yaml
+++ b/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/location_array.yaml
@@ -1,18 +1,18 @@
 components:
   schemas:
-    FileMetaDataArrayEnveloped:
+    FileLocationArrayEnveloped:
       type: object
       required:
         - data
         - error
       properties:
         data:
-          $ref: '#/components/schemas/FileMetaDataArrayType'
+          $ref: '#/components/schemas/FileLocationArray'
         error:
           nullable: true
           default: null
 
-    FileMetaDataArrayType:
+    FileLocationArray:
       type: array
       items:
-        $ref: './file_meta_data.yml#/components/schemas/FileMetaDataType'
+        $ref: './location.yaml#/components/schemas/FileLocation'
