--- a/api/specs/webserver/v0/components/schemas/error.yaml
+++ b/api/specs/webserver/v0/components/schemas/error.yaml
@@ -22,6 +22,7 @@ ErrorType:
 #     - e.g. metadata can serialize an exception in server that can be reproduced in client side
 #
   type: object
+  nullable: true
   properties:
     logs:
       description: log messages
