--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ matrix:
     - language: node_js
       node_js:
         - "8"
+
+      cache:
+        directories:
+          - .npm
+          - .nvm
+
       install:
         - npm install -g npm@latest
         - npm install --save-dev eslint
