Fixes login tests. Added new variable in config

--- a/services/web/server/tests/login/config.yaml
+++ b/services/web/server/tests/login/config.yaml
@@ -42,4 +42,4 @@ smtp:
   password: None
 rest:
   version: v0
-  location: ../../../../api/specs/webserver/v0/openapi.yaml
+  location: ${OSPARC_SIMCORE_REPO_ROOTDIR}/api/specs/webserver/v0/openapi.yaml
