user id needs to be passed by the director

--- a/services/dy-jupyter/docker-compose.devel.yml
+++ b/services/dy-jupyter/docker-compose.devel.yml
@@ -26,6 +26,7 @@ services:
       - ../../services/:/home/jovyan/services
       - ./devel:/home/jovyan/devel
       - ./notebooks:/home/jovyan/notebooks
+      - ./docker:/docker
   #--------------------------------------------------------------------
   storage:
     image: services_storage:latest
