Squash from PR#324 webserver uses apihub
Squashed commit of the following:

commit eb335990ad0c18fdcb25ff60a1717676d07d484e
Merge: a7158992 f7eec986
Author: Pedro Crespo <crespo@itis.ethz.ch>
Date:   Wed Nov 14 11:41:20 2018 +0100

    Bad merge
     Conflicts:
    	services/director/requirements/base.txt

commit a7158992f9cf6e7ff7cb9867d343eb2777586cfe
Merge: 0806917b b1f7ad91
Author: Pedro Crespo <crespo@itis.ethz.ch>
Date:   Wed Nov 14 11:36:07 2018 +0100

    Merge branch 'is309/webserver-uses-apihub' of github.com:pcrespov/osparc-simcore into is309/webserver-uses-apihub

commit f7eec9863f8a092b801d1553eb007eddfa792992
Merge: 0806917b b1f7ad91
Author: Pedro Crespo <crespo@itis.ethz.ch>
Date:   Wed Nov 14 11:36:07 2018 +0100

    Merge branch 'is309/webserver-uses-apihub' of github.com:pcrespov/osparc-simcore into is309/webserver-uses-apihub

commit 0806917b8e5e4cf69fa1c10b0f787f34f433ab9e
Merge: 89563a3f ed07bfda
Author: Pedro Crespo <crespo@itis.ethz.ch>
Date:   Wed Nov 14 11:35:25 2018 +0100

    Merge branch 'master' into is309/webserver-uses-apihub

commit ed07bfdad35b6fac46865098b3e44ee571b534af
Merge: 0156ec80 c258483b
Author: Pedro Crespo <crespo@itis.ethz.ch>
Date:   Wed Nov 14 11:31:37 2018 +0100

    Merge remote-tracking branch 'upstream/master'

commit c258483b413fe8aa4e233c3703b179a51601eddc
Author: Tobias Oetiker <tobi@oetiker.ch>
Date:   Wed Nov 14 11:29:25 2018 +0100

    Build Environment Fixes (#314)

    * make swarm work on osx

    * use compose to create input for docker stack

    * have a separate target for launching the qxbuild

    * do NOT put explicit dns into the compose file!!!
    rather make sure the /etc/resolve.conf on the host where docker is
    running is setup correctly!

    * do not rely on boot.sh exec permissions when starting sidecar

    * allow override of REGISTRY_URL from .env

    * better targets for fontent dev

    * Working Makefile for PowerShell

commit b1f7ad91102c112f582556339b3a1e8701091487
Merge: 89563a3

--- a/services/docker-compose.deploy.devel.yml
+++ b/services/docker-compose.deploy.devel.yml
@@ -12,8 +12,8 @@ services:
   director:
     #image: masu.speag.com/simcore/workbench/director:2.3
     image: services_director:dev
-    dns:
-      - 172.16.8.15
+    #dns:
+    #  - 172.16.8.15
     deploy:
       placement:
        constraints:
@@ -44,8 +44,8 @@ services:
   webserver:
     #image: masu.speag.com/simcore/workbench/webserver:2.3
     image: services_webserver:dev
-    dns:
-      - 172.16.8.15
+    #dns:
+    #  - 172.16.8.15
     deploy:
       placement:
         constraints:
