--- a/.env-devel
+++ b/.env-devel
@@ -10,13 +10,12 @@ POSTGRES_ENDPOINT=postgres:5432
 POSTGRES_USER=simcore
 POSTGRES_PASSWORD=simcore
 POSTGRES_DB=simcoredb
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
 RABBITMQ_USER=simcore
 RABBITMQ_PASSWORD=simcore
 RABBITMQ_PROGRESS_CHANNEL=comp.backend.channels.progress
 RABBITMQ_LOG_CHANNEL=comp.backend.channels.log
 STORAGE_ENDPOINT=storage:8080
+REGISTRY_URL=masu.speag.com
 S3_ENDPOINT=minio:9000
 S3_ACCESS_KEY=12345678
 S3_SECRET_KEY=12345678
