--- a/api/specs/shared/schemas/node-output-list-icon-api-v0.0.1.yaml
+++ b/api/specs/shared/schemas/node-output-list-icon-api-v0.0.1.yaml
@@ -40,6 +40,7 @@ properties:
             label:
               type: string
             thumbnail:
+              description: data url - https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/Data_URIs
               type: string
   getItem:
       description: get details about an item in the list
