--- a/services/docker-compose.stack.osparc.itis.template
+++ b/services/docker-compose.stack.osparc.itis.template
@@ -3,14 +3,14 @@
 version: '3.4'
 services:
   apihub:
-    image: masu.speag.com/simcore/workbench/apihub:3.19
+    image: masu.speag.com/simcore/workbench/apihub:3.21
     deploy:
       placement:
        constraints:
           - node.platform.os == linux
 
   director:
-    image: masu.speag.com/simcore/workbench/director:3.19
+    image: masu.speag.com/simcore/workbench/director:3.21
     deploy:
       placement:
        constraints:
@@ -42,8 +42,8 @@ services:
       - '/var/run/docker.sock:/var/run/docker.sock'
 
   webserver:
-    image: masu.speag.com/simcore/workbench/webserver:3.20
-      deploy:
+    image: masu.speag.com/simcore/workbench/webserver:3.21
+    deploy:
       placement:
         constraints:
           - node.platform.os == linux
@@ -68,6 +68,8 @@ services:
       - S3_BUCKET_NAME=simcore
       - SMTP_HOST=smtp.speag.com
       - SMTP_PORT=25
+      - STORAGE_HOST=storage
+      - STORAGE_PORT=8080
     ports:
       - '9081:8080'
 
@@ -80,7 +82,7 @@ services:
       - "15672:15672"
 
   sidecar:
-    image: masu.speag.com/simcore/workbench/sidecar:3.19
+    image: masu.speag.com/simcore/workbench/sidecar:3.21
     environment:
       - POSTGRES_ENDPOINT=masu.speag.com:5432
       - POSTGRES_USER=scu
@@ -111,6 +113,32 @@ services:
       - 5555:5555
     depends_on:
       - rabbit
+
+  storage:
+    image: masu.speag.com/simcore/workbench/storage:3.21
+    deploy:
+      placement:
+        constraints:
+          - node.platform.os == linux
+          - node.role == manager
+    ports:
+      - "11111:8080"
+    environment:
+      - POSTGRES_ENDPOINT=masu.speag.com:5432
+      - POSTGRES_USER=scu
+      - POSTGRES_PASSWORD=<edit>
+      - POSTGRES_DB=simcoredb
+      - POSTGRES_HOST=masu.speag.com
+      - POSTGRES_PORT=5432
+      - S3_ENDPOINT=osparc01.speag.com:10001
+      - S3_ACCESS_KEY=<edit>
+      - S3_SECRET_KEY=<edit>
+      - S3_BUCKET_NAME=simcore
+      - BF_API_SECRET="none"
+      - BF_API_KEY="none"
+    depends_on:
+      - minio
+      - postgres
 
 volumes:
   input:
