use env variable instead of hard-coded host/port

--- a/services/web/server/src/simcore_service_webserver/config/server-template.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-template.yaml
@@ -14,8 +14,8 @@ db:
     database: ${POSTGRES_DB}
     user: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
-    host: localhost
-    port: 5432
+    host: ${POSTGRES_HOST}
+    port: ${POSTGRES_PORT}
     minsize: 1
     maxsize: 5
     endpoint: ${POSTGRES_ENDPOINT}
