--- a/services/web/server/src/simcore_service_webserver/config/server-docker-dev.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-docker-dev.yaml
@@ -17,8 +17,8 @@ db:
     endpoint: ${POSTGRES_ENDPOINT}
     user: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
-    host: postgres
-    port: 5432
+    host: ${POSTGRES_HOST}
+    port: ${POSTGRES_PORT}
 rabbit:
   user: ${RABBITMQ_USER}
   password: ${RABBITMQ_PASSWORD}
