--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - S3_ACCESS_KEY=${S3_ACCESS_KEY}
       - S3_SECRET_KEY=${S3_SECRET_KEY}
       - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - STORAGE_ENDPOINT=${STORAGE_ENDPOINT}
       - RUN_DOCKER_ENGINE_ROOT=${RUN_DOCKER_ENGINE_ROOT}
       - PUBLISHED_HOST_NAME=${PUBLISHED_HOST_NAME}
     volumes:
