Fixes failing references in api/specs

--- a/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
+++ b/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
@@ -2,7 +2,7 @@
   {
     "projectUuid": "f8000108-2744-41e9-a1a7-f7d4f3a8f26b",
     "name": "Colleen Clancy use cases",
-    "description": "All use "cases": 0D, 1D, 2D",
+    "description": "All use cases: 0D, 1D, 2D",
     "notes": "Empty",
     "thumbnail": "https://placeimg.com/171/96/tech/grayscale/?18.jpg",
     "owner": "Colleen Clancy",
