--- a/services/dy-3dvis/simcoreparaviewweb/config/apache.conf
+++ b/services/dy-3dvis/simcoreparaviewweb/config/apache.conf
@@ -3,12 +3,14 @@
   SetEnv POSTGRES_USER ${POSTGRES_USER}
   SetEnv POSTGRES_PASSWORD ${POSTGRES_PASSWORD}
   SetEnv POSTGRES_ENDPOINT ${POSTGRES_ENDPOINT}
+  SetEnv STORAGE_ENDPOINT ${STORAGE_ENDPOINT}
   SetEnv S3_BUCKET_NAME ${S3_BUCKET_NAME}
   SetEnv S3_SECRET_KEY ${S3_SECRET_KEY}
   SetEnv S3_ACCESS_KEY ${S3_ACCESS_KEY}
   SetEnv S3_ENDPOINT ${S3_ENDPOINT}
   SetEnv SIMCORE_NODE_UUID ${SIMCORE_NODE_UUID}
   SetEnv SIMCORE_PIPELINE_ID ${SIMCORE_PIPELINE_ID}
+  SetEnv SIMCORE_USER_ID ${SIMCORE_USER_ID}
   SetEnv PYTHONPATH ${PYTHONPATH}
   
   Alias "/setport" "/home/root/src/setport.py"
@@ -21,5 +23,5 @@
     AllowOverride None
     Require all granted
     Options +ExecCGI
-    AddHandler cgi-script .py
+    AddHandler cgi-script .py .sh
   </Directory>
