--- a/services/dy-3dvis/simcoreparaviewweb/Dockerfile
+++ b/services/dy-3dvis/simcoreparaviewweb/Dockerfile
@@ -23,9 +23,10 @@ RUN apt-get update && \
     python3-pip && \
     python3 -V
 
-# install python 3.6
+# install python 3.6 for root and also for www-data
+ENV PYENV_ROOT=/pyenv
 RUN curl -L https://raw.githubusercontent.com/yyuu/pyenv-installer/master/bin/pyenv-installer | bash && \
-    export PATH="/root/.pyenv/bin:$PATH" && \
+    export PATH="${PYENV_ROOT}/bin:$PATH" && \
     eval "$(pyenv init -)" && \
     eval "$(pyenv virtualenv-init -)" && \
     apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev \
@@ -33,7 +34,8 @@ RUN curl -L https://raw.githubusercontent.com/yyuu/pyenv-installer/master/bin/py
     xz-utils tk-dev libffi-dev liblzma-dev && \
     pyenv install 3.6.7 && \
     pyenv global 3.6.7 && \
-    python -V
+    pip install --upgrade pip wheel setuptools
+
 # get the patched visualizer
 COPY --from=visualizer /home/node/visualizer/dist /opt/paraview/install/share/paraview-5.5/web/visualizer/www
 WORKDIR /home/root
