--- a/services/dy-3dvis/simcoreparaviewweb/config/apache.conf
+++ b/services/dy-3dvis/simcoreparaviewweb/config/apache.conf
@@ -11,17 +11,16 @@
   SetEnv SIMCORE_NODE_UUID ${SIMCORE_NODE_UUID}
   SetEnv SIMCORE_PIPELINE_ID ${SIMCORE_PIPELINE_ID}
   SetEnv SIMCORE_USER_ID ${SIMCORE_USER_ID}
-  SetEnv PYTHONPATH ${PYTHONPATH}
   
-  Alias "/setport" "/home/root/src/setport.py"
-  Alias "/visualizer/retrieve" "/home/root/src/input-retriever.py"
+  Alias "/setport" "/home/root/cgi_scripts/setport.py"
+  Alias "/visualizer/retrieve" "/home/root/cgi_scripts/input-retriever.py"
 
-  <Directory /home/root/src/>
+  <Directory /home/root/cgi_scripts/>
     Options Indexes FollowSymLinks
     Order allow,deny
     Allow from all
     AllowOverride None
     Require all granted
     Options +ExecCGI
-    AddHandler cgi-script .py .sh
+    AddHandler cgi-script .py
   </Directory>
