--- a/services/dy-3dvis/simcoreparaviewweb/Dockerfile
+++ b/services/dy-3dvis/simcoreparaviewweb/Dockerfile
@@ -88,10 +88,12 @@ FROM common AS production
 COPY packages/simcore-sdk /home/root/packages/simcore-sdk
 COPY packages/s3wrapper /home/root/packages/s3wrapper
 COPY services/storage/client-sdk /home/root/services/storage/client-sdk
-# copy the default notebook
-RUN pip3 install /home/root/packages/simcore-sdk &&\
-    pip3 install /home/root/packages/s3wrapper && \
-    pip3 install /home/root/services/storage/client-sdk/python
+# install packages but beware we need to use python 3.6 through pyenv
+RUN export PATH="${PYENV_ROOT}/bin:$PATH" && \
+    eval "$(pyenv init -)" && \
+    pip install /home/root/packages/simcore-sdk &&\
+    pip install /home/root/packages/s3wrapper && \
+    pip install /home/root/services/storage/client-sdk/python
 # copy script to get the inputs inside the local file system
 COPY services/dy-3dvis/simcoreparaviewweb/cgi_scripts /home/root/cgi_scripts
 ENTRYPOINT [ "/bin/bash", "docker/boot.sh" ]
