--- a/services/docker-compose.tools.yml
+++ b/services/docker-compose.tools.yml
@@ -2,14 +2,14 @@ version: '3.4'
 services:
   # Maintenance services
   #--------------------------------------------------------------------
-  # celery workers monitor
-  flower:
-    image: ondrejit/flower:latest
-    command: --broker=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@rabbit:5672
-    ports:
-      - 5555:5555
-    depends_on:
-      - rabbit
+  # By default disabled: celery workers monitor
+  #flower:
+  #  image: ondrejit/flower:latest
+  #  command: --broker=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@rabbit:5672
+  #  ports:
+  #    - 5555:5555
+  #  depends_on:
+  #    - rabbit
   #--------------------------------------------------------------------
   # monitors databases
   adminer:
