--- a/services/dy-modeling/docker-compose.yml
+++ b/services/dy-modeling/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         io.simcore.contact: '{"contact": "anderegg@itis.swiss"}'        
         io.simcore.inputs: '{"inputs": {"input_1":{"label": "Entities in", "displayOrder":0, "description": "List of entities", "type": "data:*/*"}}}'
         io.simcore.outputs: '{"outputs": {"output_1":{"label": "Entities out", "displayOrder":1, "description": "List of entities", "type": "data:*/*"}}}'
-        LABEL simcore.service.settings: '[{"name": "ports", "type": "int", "value": 9090}, {"name": "constraints", "type": "string", "value": ["node.platform.os == linux"]}, {"name": "env", "type": "string", "value": ["CS_S4L_HOSTNAME=modeler_xrpc-worker_%service_uuid%"]}]'
+        simcore.service.settings: '[{"name": "ports", "type": "int", "value": 9090}, {"name": "constraints", "type": "string", "value": ["node.platform.os == linux"]}, {"name": "env", "type": "string", "value": ["CS_S4L_HOSTNAME=modeler_xrpc-worker_%service_uuid%"]}]'
         simcore.service.dependencies: '[{"key": "simcore/services/dynamic/modeler/xrpc-worker", "tag": "2.0.0"}]'
         org.label-schema.schema-version: "1.0"
         org.label-schema.build-date: "${BUILD_DATE}"
