--- a/services/dy-modeling/docker-compose.yml
+++ b/services/dy-modeling/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.6'
 services:
   client:
     build:      
@@ -7,7 +7,8 @@ services:
 #-------------------------------------------------------------------- 
   server:
     build:
-      context: server
+      context: ../../
+      dockerfile: services/dy-modeling/server/Dockerfile
       target: production
       args:
         web_app_port: 9090
