set port configuration to get a string as input

--- a/services/dy-modeling/server/devel/port_config.json
+++ b/services/dy-modeling/server/devel/port_config.json
@@ -2,7 +2,7 @@
     "version":"0.1",
     "schema": {
         "inputs":{
-            "integrated_file_name": {
+            "project_file_name": {
                 "displayOrder": 0,
                 "label": "The input file name",
                 "description": "Some 3D data",
@@ -11,6 +11,8 @@
         },
         "outputs":{}
     },
-    "inputs": {},
+    "inputs": {
+        "project_file_name": "ratmodel_simplified.smash"
+    },
     "outputs": {}
 }
