load data when server is directed to do so through route

--- a/services/dy-modeling/server/devel/port_config.json
+++ b/services/dy-modeling/server/devel/port_config.json
@@ -2,7 +2,7 @@
     "version":"0.1",
     "schema": {
         "inputs":{
-            "project_file_name": {
+            "model_name": {
                 "displayOrder": 0,
                 "label": "The input file name",
                 "description": "Some 3D data",
@@ -12,7 +12,7 @@
         "outputs":{}
     },
     "inputs": {
-        "project_file_name": "ratmodel_simplified.smash"
+        "model_name": "ratmodel_simplified.smash"
     },
     "outputs": {}
 }
