change default loaded data to the bigger one

--- a/services/dy-modeling/server/devel/port_config.json
+++ b/services/dy-modeling/server/devel/port_config.json
@@ -12,7 +12,7 @@
         "outputs":{}
     },
     "inputs": {
-        "model_name": "ratmodel_simplified.smash"
+        "model_name": "DecDemo_LF.smash"
     },
     "outputs": {}
 }
