--- a/api/specs/shared/schemas/running_service.yaml
+++ b/api/specs/shared/schemas/running_service.yaml
@@ -10,12 +10,14 @@ components:
         error:
           nullable: true
           default: null
-          
+
     RunningServiceType:
       type: object
       required:
         - published_port
         - service_uuid
+        - service_key
+        - service_version
       properties:
         published_port:
           description: The ports where the service provides its interface
@@ -32,3 +34,18 @@ components:
           type: string
           format: UUID
           example: 123e4567-e89b-12d3-a456-426655440000
+        service_key:
+          type: string
+          description: distinctive name for the node based on the docker registry path
+          pattern: '^(simcore)/(services)/(comp|dynamic)(/[^\s/]+)+$'
+          example:
+            - simcore/services/comp/itis/sleeper
+            - simcore/services/dynamic/3dviewer
+        service_version:
+          type: string
+          description: semantic version number
+          pattern: >-
+            ^(0|[1-9]\d*)(\.(0|[1-9]\d*)){2}(-(0|[1-9]\d*|\d*[-a-zA-Z][-\da-zA-Z]*)(\.(0|[1-9]\d*|\d*[-a-zA-Z][-\da-zA-Z]*))*)?(\+[-\da-zA-Z]+(\.[-\da-zA-Z-]+)*)?$
+          example:
+            - 1.0.0
+            - 0.0.1
