changed default file to transmit in devel mode fixed issue where the rat is always loaded. now loads whatever file name is defined in the database if available

--- a/services/dy-modeling/server/devel/port_config.json
+++ b/services/dy-modeling/server/devel/port_config.json
@@ -12,7 +12,7 @@
         "outputs":{}
     },
     "inputs": {
-        "model_name": "DecDemo_LF.smash"
+        "model_name": "DemoDec_OnlyHead_Clean_Neuron.smash"
     },
     "outputs": {}
 }
