--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -166,6 +166,7 @@ services:
     depends_on:
       - minio
       - postgres
+      - apihub
   #--------------------------------------------------------------------
   minio:
     image: minio/minio
