--- a/api/specs/shared/schemas/running_service.yaml
+++ b/api/specs/shared/schemas/running_service.yaml
@@ -18,6 +18,8 @@ components:
         - service_uuid
         - service_key
         - service_version
+        - service_host
+        - service_port
       properties:
         published_port:
           description: The ports where the service provides its interface
@@ -49,3 +51,17 @@ components:
           example:
             - 1.0.0
             - 0.0.1
+        service_host:
+          description: service host name within the network
+          type: string
+          example: jupyter_E1O2E-LAH
+        service_port:
+          description: port to access the service within the network
+          type: integer
+          minimum: 1
+          example: 8081
+        service_basepath:
+          description: different base path where current service is mounted otherwise defaults to root
+          type: string
+          example: '/x/E1O2E-LAH'
+          default: /
