--- a/services/dy-modeling/docker-compose.devel.yml
+++ b/services/dy-modeling/docker-compose.devel.yml
@@ -31,12 +31,17 @@ services:
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_PORT=${POSTGRES_PORT}
       - TEST_DATA_PATH=/home/node/test-data
+      - SIMCORE_NODE_BASEPATH=${SIMCORE_NODE_BASEPATH}
     depends_on:
         - client
         - storage
         - postgres
         - minio
   #--------------------------------------------------------------------
+  apihub:
+    image: services_apihub:latest
+    ports:
+      - 8043:8043
   storage:
     image: services_storage:latest
     ports:
@@ -55,9 +60,12 @@ services:
       - RUN_DOCKER_ENGINE_ROOT=1
       - BF_API_SECRET=none
       - BF_API_KEY=none
+      - APIHUB_HOST=${APIHUB_HOST}
+      - APIHUB_PORT=${APIHUB_PORT}
     restart: always
     depends_on: 
       - postgres
+      - apihub
   #--------------------------------------------------------------------
   postgres:
     image: postgres:10
