--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -32,6 +32,8 @@ services:
       - ./web/server:/home/scu/services/web/server
       - ./web/client/source-output:/home/scu/services/web/client
       - ../packages:/home/scu/packages
+    stdin_open: true
+    tty: true
     depends_on:
       - webclient
   #--------------------------------------------------------------------
@@ -42,7 +44,7 @@ services:
         - HOST_GID_ARG=${HOST_GID:?Undefined host gid}
       target: development
     volumes:
-      - ./sidecar:/home/scu/services/sidecar      
+      - ./sidecar:/home/scu/services/sidecar
       - ./storage/client-sdk:/home/scu/services/storage/client-sdk
       - ../packages:/home/scu/packages
   #--------------------------------------------------------------------
@@ -55,3 +57,5 @@ services:
     volumes:
       - ./storage:/home/scu/services/storage
       - ../packages:/home/scu/packages
+    stdin_open: true
+    tty: true
